--- a/css/project.scss
+++ b/css/project.scss
@@ -46,7 +46,7 @@ body {
           transition: 3s;
         }
 
-        .phone { //png fix
+        .phone {
           width: 16rem;
           height:32rem;
           position: absolute;
